[tool.poetry]
name = "auditor"
version = "1.0.0"
description = "Cashu Round Robin Auditor"
authors = ["callebtc <callebtc@protonmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
SQLAlchemy = {version = "^2.0.35", extras = ["asyncio"]}
ruff = "^0.6.9"
isort = "^5.13.2"
bolt11 = "^2.1.0"
alembic = "^1.13.3"
mypy = "^1.11.2"
cashu = "0.19.2"
cbor2 = "^5.6.5"
marshmallow = "^3.21.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.25.0"

[tool.poetry.scripts]
auditor = "src.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
